# SamPressQT

./: .gitignore  CMakeLists.txt  CMakePresets.json  SamPressQT.pro  build_web.ps1  build_web.sh  config.json
.github/workflows/: build-windows.yml
src/cpp/: main.cpp  mainwindow.cpp  mainwindow.h
src/cpp/bridge/: LogBridge.cpp  LogBridge.h  PlcBridge.cpp  PlcBridge.h
src/cpp/config/: ConfigManager.cpp  ConfigManager.h  DeviceConfig.h
src/cpp/log/: LogManager.cpp  LogManager.h
src/cpp/modbus/: ModbusManager.cpp  ModbusManager.h  PlcAddressMapper.cpp  PlcAddressMapper.h  SignalManager.cpp  SignalManager.h
src/web/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
src/web/scripts/: generate-qrc.js
src/web/src/: App.vue  main.ts
src/web/src/api/: auth.ts  http.ts
src/web/src/api/modules/: erp.ts  job.ts  login.ts  mold.ts
src/web/src/bridge/: channel.ts  log.ts  plc.ts
src/web/src/components/business/: ActionButtonsSection.vue  CurrentJobTable.vue  DeviceCard.vue  DeviceParamsSection.vue  JobSelectionSection.vue  MoldLockPanel.vue  MoldLockTable.vue  MoldSearchSelect.vue  MoldUnlockPanel.vue  Numpad.vue  ParamCard.vue  RecentJobTable.vue  SelectionPanel.vue  index.ts
src/web/src/components/layout/: TopNav.vue  index.ts
src/web/src/components/ui/: Alert.vue  Badge.vue  Button.vue  Card.vue  ConfirmModal.vue  Dropdown.vue  Input.vue  MetricCard.vue  NavItem.vue  SearchInput.vue  SlideToast.vue  Status.vue  Table.vue  ToastContainer.vue  index.ts
src/web/src/composables/: useMoldLock.ts  useToast.ts
src/web/src/constants/: config.ts  index.ts  plc.ts
src/web/src/router/: index.ts
src/web/src/stores/: useToastStore.ts  useUserStore.ts
src/web/src/stores/device/: useDeviceJobStore.ts
src/web/src/stores/erp/: useErpStore.ts
src/web/src/stores/log/: useLogStore.ts
src/web/src/stores/mold/: useMoldStore.ts
src/web/src/styles/: tailwind.css
src/web/src/types/: device.ts  log.ts  mold.ts  plc.ts
src/web/src/utils/: index.ts  logger.ts  throttle.ts
src/web/src/views/: Dashboard.vue  Devices.vue  Logs.vue  Manual.vue  SignalDebug.vue
(+2 files in other folders)
